// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapRoutesByPermission 7394149: [Given] no permissions [And] feature flags are assigned [Then] expect only unprotected routes to be returned 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7394150: [Given] no permissions are assigned [And] the admin-user-management is 'true' [Then] expect only unprotected routes to be returned 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403778: [Given] all permissions are assigned [And] the admin-user-management is 'true' [Then] expect the admin routes [And] unprotected routes to be returned 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403779: [Given] all User permissions are assigned [And] the admin-user-management is 'true' [Then] expect the admin User routes [And] unprotected routes to be returned 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403780: [Given] all permissions are assigned [And] the admin-user-management is 'false' [Then] expect the admin routes [And] unprotected routes to be returned 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403781: [Given] all User permissions are assigned [And] the admin-user-management is 'false' [Then] expect the admin User routes [And] unprotected routes to be returned 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403782: [Given] the user has the permission 'q4graph:read:organizations' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin",
  "/admin/organizations",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403783: [Given] the user has the permission 'q4graph:manage:organizations' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403784: [Given] the user has the permission 'q4graph:read:users' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403785: [Given] the user has the permission 'q4graph:manage:users' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403786: [Given] the user has the permission 'q4graph:manage:users:q4-client-teams' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403787: [Given] the user has the permission 'q4graph:read:agency:linked-organizations' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403788: [Given] the user has the permission 'q4graph:manage:agency:linked-organizations' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7403789: [Given] the user has the permission 'q4graph:manage:users:q4-admin' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404282: [Given] the user has all permissions, has all entitlements [And] featureFlag is set to 'true' [Then] expect the admin routes [And] the entitlement assigned routes to be returned. 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404432: [Given] the user has all permissions, has all entitlements [And] featureFlag is set to 'false' [Then] expect the admin routes [And] the entitlement assigned routes to be returned. 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404433: [Given] the user has all permissions, no entitlements [And] featureFlag is set to 'true' [Then] expect the admin routes to be returned. 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404434: [Given] the user has all permissions, no entitlements [And] featureFlag is set to 'false' [Then] expect unprotected routes [And] the admin routes to be returned. 1`] = `
[
  "/admin",
  "/admin/users",
  "/admin/users/edit",
  "/admin/users/edit/:userId",
  "/admin/organizations",
  "/admin/organizations/add",
  "/admin/organizations/edit/:id",
  "/admin/organizations/view/:id",
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/user/add",
  "/admin/organizations/edit/:id/user/edit/:userId",
  "/admin/organizations/edit/:id/user/edit/:userId/?returnUrl=:returnUrl",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404435: [Given] the user has no permissions, has all entitlements [And] featureFlag is set to 'true' [Then] expect the entitlement assigned routes to be returned. 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404436: [Given] the user has no permissions, has all entitlements [And] featureFlag is set to 'false' [Then] expect the entitlement assigned routes to be returned. 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7404437: [Given] the user has no permissions, no entitlements [And] featureFlag is set to 'true' [Then] expect the unprotected routes to be returned. 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 7405508: [Given] the user has no permissions, no entitlements [And] featureFlag is set to 'false' [Then] expect the entitlement assigned routes to be returned. 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008391: [Given] the user has the permission 'earnings::access:app' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008392: [Given] the user has the permission 'earnings::create:plan' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008393: [Given] the user has the permission 'earnings::delete:plan' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008394: [Given] the user has the permission 'earnings::update:plan' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008395: [Given] the user has the permission 'earnings::read:plan' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;

exports[`mapRoutesByPermission 8008396: [Given] the user has the permission 'earnings::contribute:plan' are assigned [Then] expect the routes to match 1`] = `
[
  "/admin/organizations/edit/:id/linked-organizations",
  "/admin/organizations/edit/:id/team/add",
  "/admin/organizations/edit/:id/team/:teamId/edit",
]
`;
